# JuliaOS

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STRUCTURE.md  hardhat.config.ts  j3os.bat  j3os.sh  jest.config.js  juliaos.bat  package.json  setup.jl  test.js  test_bridge.jl  test_modules.jl  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml
bridges/: README.md
cli/: README.md  j3os.ps1  j3os.sh  package.json
cli/scripts/: setup.js
config/: README.md
contracts/: README.md
docs/: API_REFERENCE.md  CLI_GUIDE.md  FRAMEWORK_GUIDE.md  README.md  monitoring.md  wallet-setup.md
docs/api-reference/: README.md
docs/cli/: getting-started.md  guide.md
docs/core-concepts/: README.md  TESTING.md  TROUBLESHOOTING.md
examples/: advanced-agent.ts  advanced-agents.ts  defi-trading-agent.ts  multi-platform-agent.ts  simple-agent.ts
julia/: README.md  hello.jl  juliaos.bat  juliaos.jl  package.json  run_tests.jl  setup.jl  setup_and_test.jl  start_server.jl  test.jl  test_import.jl  test_simple.jl
julia/apps/: cli.jl
scripts/: clean-sensitive-files.bat  clean-sensitive-files.sh  cleanup.sh  run-tests.js  test-bridge.ts  update-imports.js
solana-bridge/julia-bridge/programs/julia-bridge/: Cargo.toml
solana-bridge/julia-bridge/programs/julia-bridge/src/: lib.rs
solana-bridge/julia-bridge/programs/julia-bridge/tests/: julia_bridge_tests.rs
solana-test/: package.json  test.ts  tsconfig.json
solana-test-new/: package.json  test.js
solana-test-standalone/: package.json  test.js
src/: relay.ts
tests/: README.md
(+176 files in other folders)
