[package]
name = "julia-bridge"
version = "0.1.0"
description = "Cross-chain bridge program for JuliaOS"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "julia_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
thiserror = "1.0.50"
